--- a/web3-jsmastery/client/package.json
+++ b/web3-jsmastery/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "krypt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "eth-revert-reason": "^1.0.3",
+    "ethers": "^5.7.0",
+    "framer-motion": "^7.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
